# chaop

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-Hans.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: unit-tests.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/worker/: .dev.vars.example  package.json  tsconfig.json  wrangler.jsonc
crates/agent/: Cargo.toml
crates/agent/src/: app_server_manager.rs  config.rs  connector.rs  executor.rs  lib.rs  main.rs  placeholder.rs  session_inventory.rs  shutdown.rs
docs/: PROJECT_STATE.md  PROJECT_STATE.zh-Hans.md  PROJECT_TODO.md  PROJECT_TODO.zh-Hans.md  cost-aware.md  cost-aware.zh-Hans.md  deployment-guide.md  deployment-guide.zh-Hans.md  design-starter.md  design-starter.zh-Hans.md  dogfood-runbook.md  dogfood-runbook.zh-Hans.md  e2e-smoke.md  e2e-smoke.zh-Hans.md  ux-visual-directions.md  ux-visual-directions.zh-Hans.md
migrations/d1/: 0001_initial.sql  0002_add_connectors_token_hash_index.sql  0003_task_archive_host_sessions.sql  0004_host_session_syncs.sql  0005_allow_failed_task_state.sql  0006_host_session_app_server_present.sql  0007_command_lease_target_host_session.sql  0008_command_target_connector_source.sql  0009_command_execution_mode.sql  0010_app_server_instances.sql  0011_app_server_instance_placement.sql  0012_usage_window_latest_index.sql  0013_budget_telemetry_samples.sql  (+9 more)
scripts/: deploy-api.mjs  deploy-web.mjs  deployed-smoke.mjs  dogfood-connector.sh  test-dogfood-connector.sh
test/: deployed-smoke.node-test.mjs
(+77 files in other folders)
