[package]
name = "chaop-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tungstenite = { version = "0.29.0", features = ["native-tls"] }

[dev-dependencies]
tempfile = "3.10"
